--- a/lab1/lab1/FirstWindow.xaml
+++ b/lab1/lab1/FirstWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:lab1"
         mc:Ignorable="d"
-        Title="FirstWindow" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize">
+        Title="FirstWindow" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Background="#FFFFECCA">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
