--- a/lab1/lab1/SecondWindow.xaml
+++ b/lab1/lab1/SecondWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:lab1"
         xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="lab1.SecondWindow"
         mc:Ignorable="d"
-        Title="SecondWindow" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize">
+        Title="SecondWindow" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
