--- a/lab1/lab1/ThirdWindow.xaml
+++ b/lab1/lab1/ThirdWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:lab1"
         mc:Ignorable="d"
-        Title="ThirdWindow" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize">
+        Title="ThirdWindow" Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
