--- a/lab1/lab1/MainWindow.xaml
+++ b/lab1/lab1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:lab1"
         mc:Ignorable="d"
-        Title="Лабораторна робота №1 " Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen">
+        Title="Лабораторна робота №1 " Height="450" Width="800"  WindowStartupLocation="CenterScreen" WindowStyle="None" Visibility="Visible" ResizeMode="NoResize">
     <Window.Effect>
         <DropShadowEffect/>
     </Window.Effect>
